@@ -1,3 +1,9 @@
+2004-04-05	blytkerchan
+	* LCFlexLexer.cc (yyFlexLexer::yylex): new function
+	* Makefile.am [libconf_posix_la_LIBADD]: add flex' library
+	* confl.l [YY_DECL]: define
+	* conp.y (yyerror): new function
+
 2004-04-02	blytkerchan
 	* LCFlexLexer.h [class LCFlexLexer]: remove yvalp field
 	* confl.l: handle list types
